2011-05-23  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (TESTS): Add run-strip-reloc.sh.
	(EXTRA_DIST): Add run-strip-reloc.sh, hello_i386.ko.bz2
	hello_x86_64.ko.bz2 and hello_ppc64.ko.bz2
	* run-strip-reloc.sh: New test.
	* hello_i386.ko.bz2: New test file.
	* hello_x86_64.ko.bz2: Likewise.
	* hello_ppc64.ko.bz2: Likewise.

2011-05-18  Mark Wielaard  <mjw@redhat.com>

	* run-strip-groups.sh: New test.
	* testfile58.bz2: New test file.
	* Makefile.am (EXTRA_DIST): Add testfile58.bz2.
	(TESTS): Add run-strip-groups.sh.
	(EXTRA_DIST): Likewise.

2011-03-28  Marek Polacek  <mpolacek@redhat.com>

	* alldts.c: New file.
	* run-alldts.sh: Use it.
	* Makefile.am (TESTS, EXTRA_DIST, noinst_PROGRAMS): Add them.
	(alldts_LDADD): New variable.

2011-03-02  Marek Polacek  <mpolacek@redhat.com>

	* dwarf-getstring.c: New test.
	* run-dwarf-getstring.sh: And its wrapper.
	* Makefile.am (EXTRA_DIST): Add and update all.

2011-02-27  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (TESTS): Add run-readelf-twofiles.sh.
	* run-readelf-twofiles.sh: New file.

2011-02-25  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (BUILD_RPATH): Be consistent in naming.

2011-02-02  Josh Stone  <jistone@redhat.com>

	* run-prelink-addr-test.sh: Add testfile55, 32 and 64-bit.
	* testfile55-64.bz2, testfile55-64.debug.bz2,
	testfile55-64.prelink.bz2, testfile55-32.bz2,
	testfile55-32.debug.bz2, testfile55-32.prelink.bz2: New.
	* Makefile.am (EXTRA_DIST): Add and update all.

2011-01-12  Roland McGrath  <roland@redhat.com>

	* run-prelink-addr-test.sh: Make symlinks to find .debug files
	corresponding to .noshdrs files.

2011-01-11  Josh Stone  <jistone@redhat.com>

	* run-prelink-addr-test.sh: Add testfile54, 32 and 64-bit.
	* testfile54-32.so.bz2, testfile54-32.so.debug.bz2,
	testfile54-32.prelink.so.bz2, testfile54-32.noshdrs.so.bz2,
	testfile54-64.so.bz2, testfile54-64.so.debug.bz2,
	testfile54-64.prelink.so.bz2, testfile54-64.noshdrs.so.bz2: New.